# samples

./: README.md
control_examples/: pid.cpp
cuda_examples/: Makefile  README.md  TSP.cu  cudaBFS.cu  cudaFFT.cu  cudaLCS.cu  floyd_warshall.cu  integral.cu  knapsack.cu  monte_carlo.cu  multiMitrix.cu  primes.cu
finetune/flux.1dev/caland/: README.md  dataset.toml  sample_prompts.txt  train.sh
opencl_examples/: LCS.cpp  Makefile  README.md  TSP.cpp  bfs.cpp  floyd_warshall.cpp  integral.cpp  knapsack.cpp  multi_matrix.cpp  primes.cpp
opencv_examples/: README.md
opencv_examples/object_detect/yolov8/: CMakeLists.txt  yolov8libtorch.cpp
opencv_examples/object_detect/yolov8py/: detect.py  requirements.txt
opencv_examples/object_track/: CMakeLists.txt  object_track.cpp
opencv_examples/stereo_distance/: CMakeLists.txt  stereo_distance_cuda.cpp
opengl_examples/: README.md
opengl_examples/bouncing_ball/: BouncingBall  bouncing_ball.cpp  build.sh
opengl_examples/shooting_game/: build.sh  shooting_game  shooting_game.cpp  shooting_game_smallwindow  shooting_game_smallwindow.cpp
opengl_examples/test_opengl/: build.sh  testOpenGL  test_opengl.cpp
openmp_examples/: LCS.cpp  Makefile  TSP.cpp  bfs.cpp  fft.cpp  floyd_warshall.cpp  integral.cpp  knapsack.cpp  monte_carlo.cpp  multi_matrix.cpp  nmtree.cpp  primes.cpp  result_N8_M5
protodec/: README.md  basic.proto  build.sh  common.h  container.proto  debug.sh  decode.cpp  decode.h  level.proto  main.cpp  oneof.proto  parser.cpp  parser.h  protodec  run.sh
training/log_analyze/: analyze.py  genedata.py  simulated_error_logs.csv  tiny_transformer_model.pt  train.py  train_bert.py
